2026-03-10_dhl_kubernetes/lab0/workspace/kubernetes/dhl_example_kubernetes/backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  annotations:
    app.openshift.io/connects-to: |
      [{"apiVersion":"apps/v1","kind":"StatefulSet","name":"redis"}]
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: migrations-job-read
      containers:
        - name: main
          image: ttl.sh/dhl/backend
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /livez
              port: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
