2026-03-10_dhl_kubernetes/lab0/workspace/kubernetes/dhl_example_kubernetes/redis_sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  volumeClaimTemplates:
    - metadata:
        name: redis
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
      containers:
        - name: main
          image: redis:8
          ports:
            - containerPort: 6379
          volumeMounts: 
            - name: redis
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
