2026-03-10_dhl_kubernetes/lab0/workspace/kubernetes/dhl_example_kubernetes/go_frontend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-frontend
spec:
  selector:
    app: go-frontend
  ports:
    - port: 80
      targetPort: 3000
