2026-03-10_dhl_kubernetes/lab0/workspace/kubernetes/dhl_example_kubernetes/go_frontend_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-frontend
  annotations:
    route.openshift.io/termination: "edge"
    route.openshift.io/insecureEdgeTerminationPolicy: "Redirect"
spec:
  ingressClassName: openshift-default
  rules:
    - host: dhl-example-go.apps.training.germanywestcentral.aroapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-frontend
                port:
                  number: 80
          - path: /api/counter
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
